feat: youtube api를 활용한 youtube data 적용

--- a/src/components/common/video/player/video-player.module.css
+++ b/src/components/common/video/player/video-player.module.css
@@ -1,12 +1,16 @@
-.player {
-  position: sticky;
-  top: 0;
-  text-align: center;
+.container {
+  width: 100%;
   background-color: var(--black-color);
 }
 
-.video {
+.player {
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+  aspect-ratio: 16 / 9;
+}
+
+.youtubePlayer {
   width: 100%;
   height: 100%;
-  max-width: 800px;
 }
