--- a/src/components/common/up-next/up-next.module.css
+++ b/src/components/common/up-next/up-next.module.css
@@ -1,3 +1,9 @@
+.title {
+  font-size: var(--font-medium);
+  color: var(--black-color);
+  margin-bottom: var(--spacing);
+}
+
 .nextVideos .item {
   display: flex;
   margin-top: var(--spacing);
@@ -10,6 +16,8 @@
 
 .nextVideos .item .img img {
   width: 100%;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
 }
 
 .nextVideos .item .itemInfo {
